UPDATE: started normalization

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -36,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getmean()\n",
+    "def getmean(data):\n",
+    "    \n",
     "\n",
     "def normoalize()"
    ]
