--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
     "    print(\"This is what I got: \")\n",
     "    print(\"With feature set: \" + repr(feature_set)+ \" Best accuracy: \" + \"%.2f\" % best_accuracy + \" %\")\n",
     "            \n",
-    "            "
+    "    return feature_set"
    ]
   },
   {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,39 +503,59 @@
     "                    best_accuracy = accuracy\n",
     "                    remove_this = j\n",
     "        if remove_this > 0:\n",
+    "            print(\"Removing feature: \" + repr(remove_this))\n",
     "            feature_set.discard(remove_this)\n",
     "            print(\"Best accuracy so far: \" + \"%.2f\" % best_accuracy + \" %\" + \" With feature set: \" + repr(feature_set))\n",
     "        else:\n",
-    "            print(\"(Warning, Accuracy has decreased! Continuing search in case of local maxima)\")\n",
+    "            print(\"Warning, Accuracy has decreased! Breaking out!\")\n",
+    "            break\n",
     "    print(\"This is what I got: \")\n",
-    "    print(\"With feature set: \" + repr(feature_set)+ \" Best accuracy: \" + \"%.2f\" % best_accuracy + \" %\")"
+    "    print(\"With feature set: \" + repr(feature_set)+ \" Best accuracy: \" + \"%.2f\" % best_accuracy + \" %\")\n",
+    "    return feature_set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 363,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_algorithm(data):\n",
+    "import random\n",
+    "def custom_selection(data):\n",
+    "    masking = random.randint(0, len(data[0]) - 1)\n",
+    "    masking2 = random.randint(0, len(data[0]) - 1)\n",
+    "    #print(random.randint(0,9))\n",
+    "    print(masking)\n",
+    "    print(masking2)\n",
+    "    \n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_file_open = 'CS170Smalltestdata__37.txt'\n",
+    "data = process_file(raw_file_open)\n",
+    "scaled_data = scale(data)\n",
+    "custom_selection(scaled_data)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -544,11 +564,11 @@
      "text": [
       "Froward selection\n",
       "At level: 1\n",
-      "Best accuracy so far: 83.06 % With feature set: {4}\n",
+      "Best accuracy so far: 84.27 % With feature set: {4}\n",
       "At level: 2\n",
-      "Best accuracy so far: 88.05 % With feature set: {4, 8}\n",
+      "Best accuracy so far: 91.53 % With feature set: {4, 8}\n",
       "At level: 3\n",
-      "Best accuracy so far: 91.38 % With feature set: {3, 4, 8}\n",
+      "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
       "At level: 4\n",
       "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
       "At level: 5\n",
@@ -564,45 +584,41 @@
       "At level: 10\n",
       "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
       "This is what I got: \n",
-      "With feature set: {3, 4, 8} Best accuracy: 91.38 %\n",
+      "With feature set: {4, 8} Best accuracy: 91.53 %\n",
+      "Time: 6.150810241699219\n",
       "Backward selection\n",
       "At level: 1\n",
-      "Best accuracy so far: 74.43 % With feature set: {0, 1, 2, 3, 4, 5, 7, 8, 9}\n",
+      "Removing feature: 6\n",
+      "Best accuracy so far: 74.74 % With feature set: {0, 1, 2, 3, 4, 5, 7, 8, 9}\n",
       "At level: 2\n",
-      "Best accuracy so far: 77.00 % With feature set: {0, 1, 2, 3, 4, 7, 8, 9}\n",
+      "Removing feature: 5\n",
+      "Best accuracy so far: 78.21 % With feature set: {0, 1, 2, 3, 4, 7, 8, 9}\n",
       "At level: 3\n",
-      "Best accuracy so far: 77.31 % With feature set: {0, 1, 2, 3, 4, 8, 9}\n",
-      "At level: 4\n",
-      "Best accuracy so far: 85.02 % With feature set: {0, 1, 2, 4, 8, 9}\n",
-      "At level: 5\n",
-      "Best accuracy so far: 86.38 % With feature set: {0, 1, 2, 4, 9}\n",
-      "At level: 6\n",
-      "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
-      "At level: 7\n",
-      "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
-      "At level: 8\n",
-      "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
-      "At level: 9\n",
-      "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
-      "At level: 10\n",
-      "(Warning, Accuracy has decreased! Continuing search in case of local maxima)\n",
+      "Warning, Accuracy has decreased! Breaking out!\n",
       "This is what I got: \n",
-      "With feature set: {0, 1, 2, 4, 9} Best accuracy: 88.05 %\n"
+      "With feature set: {0, 1, 2, 3, 4, 7, 8, 9} Best accuracy: 78.82 %\n",
+      "Time: 7.475250005722046\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "raw_file_open = 'CS170Smalltestdata__37.txt'\n",
     "data = process_file(raw_file_open)\n",
     "scaled_data = scale(data)\n",
     "\n",
+    "start = time.time()\n",
     "forward_selection(scaled_data)\n",
-    "backward_selection(scaled_data)\n",
+    "end = time.time()\n",
+    "print (\"Time: \" + repr(end - start))\n",
     "\n",
-    "#nearest_neighbor(data, test, )\n",
-    "#print(data)\n",
-    "#print(data[0][1])\n",
-    "#print(data[1])\n"
+    "start = time.time()\n",
+    "backward_selection(scaled_data)\n",
+    "end = time.time()\n",
+    "print (\"Time: \" + repr(end - start))\n",
+    "\n",
+    "\n"
    ]
   },
   {
